<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">宅宅网</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="loading_progress_text">加载中，请稍后...</string>
    
    <!-- values for zzour client -->
    <string name="logo_desc"></string>
    <string name="order_tab_text">订餐</string>
    <string name="store_tab_text">便利店</string>
    <string name="my_order_tab_text">我的订单</string>
    <string name="more_tab_text">更多</string>
    
    <!-- search categories -->
    <string name="search_category_shop">商家</string>
    <string name="default_search_category">@string/search_category_shop</string>
    
    <string name="search_initial_text">请输入要搜索的关键字</string>
    
    <!-- string values for buttons -->
    <string name="back_button_text">返回</string>
    
	<!-- for load more -->
	<string name="load_more_button_text">点击加载更多</string>
	<string name="loading_text">正在载入...</string>
	
	<!-- for shop detal  -->
	<string name="title_bar_text">商家详情</string>
	
	<!-- for test ui -->
	<string name="test_food_name">这里是个名字这里是个名字这里是个名字</string>
	<string name="test_food_price">￥50.5</string>
	<string name="test_food_sold_count">已售1000000份</string>
	<string name="test_food_buy_count">购买1份</string>
	
	<!-- for shopping cart -->
	<string name="cart_title">购物车</string>
	<string name="order_text">下单完成（货到付款）</string>
	<string name="box_price_text">餐盒费￥:</string>
	<string name="total_price_text">总价:</string>
	<string name="address_info_text">收货人地址</string>
	<string name="time_info_text">选择配送时间</string>
	<string name="product_info_text">商品信息</string>
	<string name="message_info_text">给卖家的留言</string>
	<string name="message_hint_text">告诉商家您对商品的特殊需求</string>
	<string name="new_address_button_text">使用新地址</string>
	<string name="dot_line_desc"></string>
	<string name="delete_btn_desc"></string>
	
	<!-- for new address dialog -->
	<string name="default_name_text">请输入收货人姓名</string>
	<string name="default_phone_text">请输入收货人联系电话</string>
	<string name="default_address_text">请再次输入楼栋号</string>
	
	<string name="default_school_text">选择学校</string>
	<string name="default_school_area_text">选择校区</string>
	<string name="default_school_area_detail_text">选择详细区域</string>
	
	<!-- for order succeed page -->
	<string name="order_succeed_title">下单结果</string>
	<string name="order_succeed_text_1">订单提交成功</string>
	<string name="order_succeed_text_2">请等待商家配送</string>
	<string name="order_succeed_text_3">跟踪订单、在线催单、在线退单</string>
	<string name="order_succeed_text_4">请进入</string>
	<string name="order_succeed_text_5">我的订单</string>
	<string name="order_succeed_text_6">提示：手机务必处于非静音状态，以便商家联系</string>
	<string name="order_succeed_text_7">确认收货后，方可获赠等值积分噢</string>
	<string name="order_succeed_image_desc"></string>
	<string name="share_text">分享给好友</string>
	<string name="order_succeed_back_to_main_text">继续下单</string>
	<string name="order_succeed_order_list_text">我的订单</string>
	
	<!-- for order detail page -->
	<string name="order_detail_title">订单详情</string>
	<string name="order_detail_time_info_text">配送时间</string>
	
	<!-- for more page -->
	<string name="more_title">更多</string>
	<string name="more_login_text">登陆</string>
	<string name="more_register_text">注册</string>
	<string name="more_logout_text">注销</string>
	<string name="more_settings_text">设置</string>
	<string name="more_about_text">关于宅宅</string>
	<string name="more_feedback_text">反馈意见</string>
	<string name="more_account_manager_title">账户</string>
	<string name="more_account_change_password_text">修改密码</string>
	<string name="more_account_change_email_text">修改邮箱</string>
	<string name="more_account_name_welcome_text">，欢迎光临</string>
	<string name="more_account_email_welcome_text">您的邮箱：</string>
	<string name="more_account_integral_text">积分：</string>
	<string name="more_account_integral_text_2">分</string>
	
	<!-- for loging page -->
	<string name="login_title">登陆</string>
	<string name="get_back_pwd_btn_text">找回密码</string>
	<string name="login_user_name_hint_text">用户名</string>
	<string name="login_password_hint_text">密码</string>
	<string name="register_btn_text">注册</string>
	<string name="login_btn_text">登陆</string>
	<string name="login_renren_btn_text">人人网账号登陆</string>
	<string name="login_qq_btn_text">QQ账号登陆</string>
	
	<!-- for register page -->
	<string name="register_title">免费注册</string>
	<string name="register_username_text">用户名：</string>
	<string name="register_username_hint_text">请认真填写，用于登录</string>
	<string name="register_password_text">密码：</string>
	<string name="register_password_hint_text">密码长度不能小于6位</string>
	<string name="register_repeat_password_text">确认密码：</string>
	<string name="register_repeat_password_hint_text">请再输入密码</string>
	<string name="register_mail_text">有效邮箱：</string>
	<string name="register_mail_hint_text">请输入有效邮箱</string>
	<string name="register_agree_protocol_text">同意《宅宅网用户协议》</string>
	<string name="register_btn_text_2">提交注册</string>
	
	<!-- for settings page -->
	<string name="settings_title">设置</string>
	<string name="settings_alert_text">每日下单提醒</string>
	<string name="settings_pic_quality_smart_text">智能模式</string>
	<string name="settings_pic_quality_smart_text_1">根据网络情况自动调整图片质量</string>
	<string name="settings_pic_quality_high_text">高清模式</string>
	<string name="settings_pic_quality_high_text_1">始终显示清晰图</string>
	<string name="settings_pic_quality_low_text">低彩模式</string>
	<string name="settings_pic_quality_low_text_1">始终显示低彩图片</string>
	<string name="settings_pic_quality_text">图片质量</string>
	<string name="settings_alert_title_text">提醒设置</string>
	<string name="settings_alert_time_text">提醒时间</string>
	<string name="arrow_desc_text"></string>
	<string name="settings_default_alert_time">09:30</string>
	<string name="settings_clear_cache_text">清理缓存</string>
	<string name="settings_clear_cache_desc_text">包括图片、数据等</string>
	
	<!-- for about page -->
	<string name="about_title">关于</string>
	<string name="about_version_text">版本号：</string>
	<string name="about_version_number_text">1.0.0</string>
	<string name="about_protocol_text">用户服务协议</string>
	<string name="about_help_text">帮助</string>
	
	<!-- for feedback page -->
	<string name="feedback_title">反馈意见</string>
	<string name="feedback_send_btn_text">发送</string>
	<string name="feedback_info_text">有问题？告诉我，我改！</string>
	<string name="feedback_message_hint_text">请写下您的意见，如方便请留下联系方式</string>
	<string name="feedback_contact_info_text">方便的话，留下您的联系方式</string>
	<string name="feedback_contact_info_hint_text">QQ/邮箱/电话都可以</string>
	
	<!-- for order list page -->
	<string name="order_list_title">我的订单</string>
	
	<!-- for store page -->
	<string name="store_title">便利店</string>
	
	<!-- for refresh loading -->
	<string name="my_order_load_more_text">更多</string>
	<string name="my_order_load_more_text_2">加载更多...</string>
	<string name="my_order_pull_tip_1">下拉可以刷新</string>
	<string name="my_order_pull_tip_2">松开可以刷新</string>
	<string name="my_order_pull_tip_3">更新于：</string>
	
</resources>