<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/order_succeed_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bar"
        android:textColor="#ffffff"
        android:gravity="center"
        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        android:text="@string/order_succeed_title"
        android:textSize="25sp" />
    
    <ScrollView android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    
		    <ImageView android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:layout_marginTop="45dp"
		        android:contentDescription="@string/order_succeed_image_desc"
		        android:src="@drawable/order_success" />
		    
		    <TextView android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:textSize="15sp"
		        android:layout_marginTop="5dp"
		        android:gravity="center"
		        android:text="@string/order_succeed_text_1" />
		    
		    <TextView android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:textSize="15sp"
		        android:layout_marginTop="15dp"
		        android:gravity="center"
		        android:text="@string/order_succeed_text_2" />
		    
		    <TextView android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:textSize="15sp"
		        android:layout_marginTop="5dp"
		        android:gravity="center"
		        android:text="@string/order_succeed_text_3" />
		    
		    <Button android:id="@+id/order_succeed_share_btn"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:background="@drawable/button"
		        android:layout_marginTop="80dp"
		        android:layout_gravity="center" 
		        android:textColor="#ffffff"
		        android:text="@string/share_text"/>
		    
		    <LinearLayout android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:orientation="horizontal">
		        
		        <Button android:id="@+id/order_succeed_continut_btn"
		        	android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		        	android:background="@drawable/button"
		        	android:layout_marginTop="5dp"
		        	android:layout_gravity="center" 
		        	android:textColor="#ffffff"
		        	android:text="@string/order_succeed_back_to_main_text"/>
		        
		        <Button android:id="@+id/order_succeed_list_btn"
		        	android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		        	android:background="@drawable/button"
		        	android:layout_marginTop="5dp"
		        	android:layout_marginLeft="10dp"
		        	android:layout_gravity="center" 
		        	android:textColor="#ffffff"
		        	android:text="@string/order_succeed_order_list_text"/>
		        
		    </LinearLayout>
    
    	</LinearLayout>
    
    </ScrollView>
    
</LinearLayout>