<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    
    <RelativeLayout android:layout_height="wrap_content"
        android:layout_width="match_parent" 
        android:paddingBottom="3dp"
        android:background="@drawable/title_bar">
        
        <include layout="@layout/back_button" />
        
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="25sp"
            android:textColor="#ffffff"
            android:layout_centerVertical="true"
            android:text="@string/register_title" />
        
    </RelativeLayout>
    
	<ScrollView 
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content">
	     
	    <LinearLayout android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical">
		    
		    <RelativeLayout android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        android:layout_margin="10dp">
		        <TextView android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textSize="20sp"
		            android:text="@string/register_username_text" />
		        <EditText android:id="@+id/register_name"
		            android:layout_width="200dp"
		            android:layout_marginLeft="10dp"
		            android:layout_height="wrap_content"
		            android:padding="3dp"
		            android:layout_alignParentRight="true"
		            android:hint="@string/register_username_hint_text"
		            android:background="@drawable/bg_edittext" />
		    </RelativeLayout>
		    
		    <RelativeLayout android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        android:layout_margin="10dp">
		        <TextView android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textSize="20sp"
		            android:text="@string/register_password_text" />
		        <EditText android:id="@+id/register_password"
		            android:layout_width="200dp"
		            android:layout_marginLeft="10dp"
		            android:layout_height="wrap_content"
		            android:padding="3dp"
		            android:inputType="textPassword"
		            android:layout_alignParentRight="true"
		            android:hint="@string/register_password_hint_text"
		            android:background="@drawable/bg_edittext" />
		    </RelativeLayout>
		    
		    <RelativeLayout android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        android:layout_margin="10dp">
		        <TextView android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textSize="20sp"
		            android:text="@string/register_repeat_password_text" />
		        <EditText android:id="@+id/register_repeat_password"
		            android:layout_width="200dp"
		            android:layout_marginLeft="10dp"
		            android:layout_height="wrap_content"
		            android:padding="3dp"
		            android:inputType="textPassword"
		            android:layout_alignParentRight="true"
		            android:hint="@string/register_repeat_password_hint_text"
		            android:background="@drawable/bg_edittext" />
		    </RelativeLayout>
		    
		    <RelativeLayout android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        android:layout_margin="10dp">
		        <TextView android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textSize="20sp"
		            android:text="@string/register_mail_text" />
		        <EditText android:id="@+id/register_mail"
		            android:layout_width="200dp"
		            android:layout_marginLeft="10dp"
		            android:layout_height="wrap_content"
		            android:padding="3dp"
		            android:inputType="textPassword"
		            android:layout_alignParentRight="true"
		            android:hint="@string/register_mail_hint_text"
		            android:background="@drawable/bg_edittext" />
		    </RelativeLayout>
		    
		    <CheckBox android:id="@+id/register_agree_protocol"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:checked="true"
		        android:text="@string/register_agree_protocol_text" />
		    
		    <Button android:id="@+id/register_btn"
			    android:layout_width="130dp"
			    android:layout_height="35dp"
			    android:layout_marginRight="10dp"
			    android:background="@drawable/button"
			    android:layout_marginTop="20dp"
			    android:textColor="#ffffff"
			    android:layout_gravity="center"
			    android:text="@string/register_btn_text_2" />
		    
	    </LinearLayout>
	    
	</ScrollView>

</LinearLayout>