<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:gravity="center">
    
    <EditText android:id="@+id/new_address_name"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:layout_marginTop="5dp"
    		android:singleLine="true"
    		android:background="@drawable/bg_edittext"
    		android:hint="@string/default_name_text"
    		android:textSize="18sp"
    		android:padding="3dp"
    		android:layout_marginLeft="3dp"
    		android:layout_marginRight="3dp" />
    
    <EditText android:id="@+id/new_address_phone"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:layout_marginTop="5dp"
    		android:inputType="phone"
    		android:singleLine="true"
    		android:background="@drawable/bg_edittext"
    		android:hint="@string/default_phone_text"
    		android:textSize="18sp"
    		android:padding="3dp"
    		android:layout_marginLeft="3dp"
    		android:layout_marginRight="3dp" />
    
    <Spinner android:id="@+id/new_address_school"   
           	android:layout_width="match_parent"  
           	android:layout_height="wrap_content"
           	android:layout_marginTop="3dp"
           	android:layout_marginBottom="3dp"
           	android:prompt="@string/default_school_text"
           	android:entries="@array/times" />
    
    <Spinner android:id="@+id/new_address_school_area"   
           	android:layout_width="match_parent"  
           	android:layout_height="wrap_content"
           	android:layout_marginTop="3dp"
           	android:layout_marginBottom="3dp"
           	android:prompt="@string/default_school_area_text"
           	android:visibility="gone"
           	android:entries="@array/times" />
    
    <Spinner android:id="@+id/new_address_school_area_detail"   
           	android:layout_width="match_parent"  
           	android:layout_height="wrap_content"
           	android:layout_marginTop="3dp"
           	android:layout_marginBottom="3dp"
           	android:prompt="@string/default_school_area_detail_text"
           	android:visibility="gone"
           	android:entries="@array/times" />
    
    <EditText android:id="@+id/new_address_detail"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:layout_marginTop="5dp"
    		android:singleLine="true"
    		android:background="@drawable/bg_edittext"
    		android:hint="@string/default_address_text"
    		android:textSize="18sp"
    		android:padding="3dp"
    		android:layout_marginLeft="3dp"
    		android:layout_marginRight="3dp" />
    
</LinearLayout>